# mellymell

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: analyze_file.py  benchmark.py  live_tuner.py  tuner_gui.py
src/mellymell/: __init__.py  backends.py  pitch.py  segment.py
tests/: test_backends.py  test_benchmarks.py  test_pitch.py
